# ChiZaiDongNongWD

./: .gitattributes  .gitignore  Readme.md  setup.cfg  test.py
czneau/: __init__.py  __main__.py  analyse.py  czneau.py  refer.py
czneau/crawlF/: F1.py  F2.py
czneau/incl/: model.pdparams
