[metadata]
name = czneau
version = 1.0.1
python_requires = >=3.7.0
author = U-73A5
author_email = u73a5@foxmail.com
description = Chi Zai DongNong Download Text
long_description = file: Readme.md, LICENSE
license = MIT
url = https://github.com/U-73A5/ChizZaiDongNongWD
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    importlib-metadata
    typing
    requests
    random
    json
    time
    rich

[options.entry_points]
console_scripts =
    executable-name = czneau.__main__:main
