[metadata]
name = czneau
version = 2.0.0.1a
author = U-73A5
author_email = u73a5@foxmail.com
description = 东北农业大学数据抓取
long_description = file: Readme.md, LICENSE
license = MIT
url = https://github.com/U-73A5/ChizZaiDongNongWD
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7.0
install_requires =
    importlib-metadata
    requests
    rich
    tqdm
    paddlehub == 2.3.0
    paddlenlp == 2.4.0
    pandas

[options.entry_points]
console_scripts =
    executable-name = czneau.__main__:main
